--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "live-server": "^1.2.1",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-slideshow-image": "^1.4.2"
   }
 }
